syntax = "proto3";

package weather;

service WeatherService {
  rpc GetWeather(WeatherRequest) returns (WeatherResponse);
}

message WeatherRequest {
  string location = 1;
}

message WeatherResponse {
  string location = 1;
  string temperature = 2;
  string condition = 3;
  string humidity = 4;
}
